--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -1,9 +1,9 @@
 /* Footer.module.css */
 .footer {
-    background-color: white;
+    background-color: var(--background);
     padding: 1.5rem 0;
     text-align: center;
-    border-top: 1px solid #EFEFEF;
+    border-top: 1px solid var(--grid-color);
     margin-top: 4rem;
     width: 100%;
     z-index: 10;
